fix: bug with overflow because of new stiky position of calc result block

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -24,10 +24,6 @@ nav a:visited {
   color: #222220;
 }
 
-.content {
-  overflow: hidden;
-}
-
 .container {
   position: relative;
   max-width: 1120px;
@@ -35,6 +31,7 @@ nav a:visited {
   padding-left: 80px;
   padding-right: 80px;
   margin: 0 auto;
+  overflow: hidden;
 }
 
 nav {
@@ -291,3 +288,22 @@ nav a, nav a:visited {
   }
 }
 
+/* for custom slider pagination */
+
+
+.pagination {
+  display: none;
+  position: relative;
+  width: 100%;
+  height: 1px;
+  background-color: rgba(244, 163, 42, 0.2);
+  margin-top: 20px;
+}
+
+.pagination-bar {
+  position: absolute;
+  height: 100%;
+  width: 0;
+  background-color: #F4A32A;
+  transition: width 0.3s ease;
+}
